* Added IPv6 support to CSocket. The network samples have been updated to
   take advantage of IPv6 support.
* Added the GDIPlus sample to demonstrate how to use the GDIplus library 
   provided with modern Windows operating systems (XP and above).
* Add the following control wrappers: CAnimation, CComboBox, CComboBoxEx,
   CProgressbar, CScrollbar, and CSpinButton.
* Extended the CToolbar class.   
* Moved the text conversion functions from CWnd to the global (Win32++) 
   namespace.
* Improved the appearance of frames without themes.
* Asserts are used more liberally to test for programming errors. Any message
   sent to a non-existant window, for example, will now assert. More asserts are
   intended to help users write code that is more robust. Note that asserts are
   only evaluated in Debug mode, and have no effect in Release mode.
* Exceptions are thrown less often. They are now thrown to indicate a critical
   problem, outside the programmer's control. Throwing fewer exceptions results 
   in slightly smaller executables, and gives users more flexibility and control
   over their own exception methodology. They are thrown by Win32++ when:
   - a window creation fails.
   - a critical dll cannot be loaded.
   - a window message cannot be routed to a CWnd object.
   - an attempt to read from or write to the registry fails.
* Added Shared_Ptr class. Note that a "shared_ptr" will be available for the
   updated C++ standard. It is already available with some modern compilers,
   and also for users of the Boost library. The "Shared_Ptr" class is intended
   as an alternative for those users who would like to use a "shared_ptr", but
   don't have access to one yet.
* Vectors are now used to replace all dynamically allocated arrays.       
            

Changes in detail
-----------------
Added CAnimation
Added CComboBox  
Added CComboBoxEx
Added CProgressbar 
Added CResizer 
Added CScrollbar 
Added CSlider 
Added CSpinButton
Added Shared_Ptr 